<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/redchristmasbackground">

    <!-- Background Image
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/menuBackground"
        android:scaleType="center"
        android:src="@mipmap/redchristmasbackground" /> -->

    <!-- Exit -->
    <ImageView
        android:id="@+id/exitImage"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/exit"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:src="@mipmap/exit" />

    <TextView
        android:id="@+id/exitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_below="@id/exitImage"
        android:paddingStart="@dimen/activity_horizontal_margin"/>

    <!-- Toggle Music Button -->
    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@color/lineColor"
        android:checked="true"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textOff="@string/MusicOFF"
        android:textOn="@string/MusicON"
        android:textStyle="bold" />

    <!-- Restart -->
    <ImageView
        android:id="@+id/restartImage"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/restart"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:src="@mipmap/restart" />

    <TextView
        android:id="@+id/restartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:layout_below="@+id/restartImage"
        android:layout_alignParentRight="true"
        android:paddingEnd="@dimen/activity_horizontal_margin"/>

    <!-- Who's Turn -->
    <TextView
        android:id="@+id/show_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/christmasTurn"
        android:textColor="@color/turnColor"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <!-- Tic Tac Toe Board -->
    <GridLayout
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="3"
        android:background="@color/boardColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_board"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin">

        <!--Blocks-->
        <ImageView
            android:id="@+id/block1"
            android:layout_marginBottom="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:id="@+id/block2"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:id="@+id/block3"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="4dp"/>

        <ImageView
            android:id="@+id/block4"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <ImageView
            android:id="@+id/block5"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <ImageView
            android:id="@+id/block6"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <ImageView
            android:id="@+id/block7"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <ImageView
            android:id="@+id/block8"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <ImageView
            android:id="@+id/block9"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/christmas_background"
            android:layout_width="90dp"
            android:layout_height="90dp"/>

    </GridLayout>

    <!-- Winning Line-->
    <View
        android:id="@+id/centerVerticalLine"
        android:layout_width="5dp"
        android:layout_height="300dp"
        android:layout_below="@id/show_board"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:background="@color/lineColor"
        android:visibility="invisible" />

    <View
        android:id="@+id/leftVerticalLine"
        android:layout_width="5dp"
        android:layout_height="300dp"
        android:layout_below="@id/show_board"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@id/centerVerticalLine"
        android:layout_marginEnd="95dp"
        android:background="@color/lineColor"
        android:visibility="invisible" />

    <View
        android:id="@+id/rightVerticalLine"
        android:background="@color/lineColor"
        android:layout_width="5dp"
        android:visibility="invisible"
        android:layout_marginStart="95dp"
        android:layout_height="300dp"
        android:layout_below="@id/show_board"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/centerVerticalLine"/>

    <View
        android:id="@+id/centerHorizontalLine"
        android:background="@color/lineColor"
        android:layout_width="300dp"
        android:visibility="invisible"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:layout_below="@id/topHorizontalLine"/>

    <View
        android:id="@+id/bottomHorizontalLine"
        android:background="@color/lineColor"
        android:layout_width="300dp"
        android:visibility="invisible"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:layout_below="@id/centerHorizontalLine"/>

    <View
        android:id="@+id/topHorizontalLine"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:background="@color/lineColor"
        android:visibility="invisible" />

    <View
        android:id="@+id/rightLeftDiagonal"
        android:layout_width="5dp"
        android:layout_height="350dp"
        android:layout_below="@id/show_board"
        android:layout_centerHorizontal="true"
        android:background="@color/lineColor"
        android:rotation="45"
        android:visibility="invisible" />

    <View
        android:id="@+id/leftRightDiagonal"
        android:background="@color/lineColor"
        android:rotation="135"
        android:layout_width="5dp"
        android:visibility="invisible"
        android:layout_below="@id/show_board"
        android:layout_centerHorizontal="true"
        android:layout_height="350dp" />

    <!-- Ornament Images-->
    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/red_ball"
        android:src="@mipmap/red_ball" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/green_ball"
        android:src="@mipmap/green_ball" />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/blue_ball"
        android:src="@mipmap/blue_ball" />

    <!--Snow animation-->
    <com.jetradarmobile.snowfall.SnowfallView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>